fix alignment issues

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 * {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Poppins;
 }
 body{
     margin:0;
@@ -115,6 +116,7 @@ body{
     display: flex;
     align-items: center;
     margin: 1.5rem;
+    width: 8rem;
 }
 .deviceActions{
     display: flex;
@@ -124,7 +126,7 @@ body{
     margin-right: 0.5rem;
 }
 .deviceName {
-    width: 15rem;
+    width: 17rem;
     margin-left: 1rem;
     margin-right: 1rem;
 }
@@ -206,6 +208,7 @@ body{
 .statusIcons{
     display: flex;
     align-items: center;
+    width: 40rem;
 }
 .statusIcons img {
     height: 2rem;
@@ -213,5 +216,6 @@ body{
 .battery{
     display: flex;
     align-items: center;
-    margin: 1.5rem;
+    margin: 3.5rem;
+    margin-left: 0.5rem;
 }
